[package]
name = "azucar-macro"
version = "0.1.0"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "syntax sugar"
readme = "../README.md"
repository = "https://github.com/sarah-quinones/azucar/"
license = "MIT"
keywords = ["syntax"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full", "visit-mut"] }
